# rhapsody-cli

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package.yml  python-publish.yml
.superpowers/sdd/: progress.md
demos/: __init__.py  _bootstrap_demo_project.py  demo_01_basic_connection.py  demo_02_project_operations.py  demo_03_element_navigation.py  demo_04_basic_element_creation.py  demo_05_error_handling.py
docs/: CODE_GUIDELINES.md  conf.py  contributing.rst  index.rst  java_api.md  license.rst  make.bat  traceability_matrix.md
docs/api/: application.rst  elements.rst  exceptions.rst  models.rst
docs/examples/: advanced_workflows.rst  basic_operations.rst  creating_models.rst
docs/plans/: type-annotation-audit-round3.md
docs/requirements/: swr_app_requirements.md  swr_cli_requirements.md  swr_cls_requirements.md  swr_core_requirements.md  swr_elem_requirements.md  swr_exc_requirements.md  swr_pkg_requirements.md  swr_port_requirements.md
docs/superpowers/plans/: 2026-07-07-audit-core-wrappers-phase1.md  2026-07-07-disable-project-subcommand.md  2026-07-08-click-to-argparse-migration.md  2026-07-08-project-review-and-fixes.md  2026-07-09-element-cli-enhancements.md  2026-07-09-package-command.md  2026-07-09-structural-model-wrappers.md  2026-07-10-class-command.md  2026-07-10-package-class-update.md  2026-07-11-rhapsody-application-redesign.md  2026-07-12-group-model-classes.md  2026-07-12-implement-support-model-classes.md  2026-07-13-integration-tests.md  2026-07-13-model-classes-full-sweep.md  2026-07-14-checklist-integration-test-column.md  2026-07-14-integration-tests-activity.md  2026-07-14-integration-tests-classifiers.md  2026-07-14-integration-tests-common.md  2026-07-14-integration-tests-containment.md  2026-07-14-integration-tests-core.md  2026-07-14-integration-tests-diagrams.md  2026-07-14-integration-tests-graphics.md  2026-07-14-integration-tests-index.md  2026-07-14-integration-tests-interactions.md  2026-07-14-integration-tests-relations.md  2026-07-14-integration-tests-requirements.md  2026-07-14-integration-tests-statemachine.md  2026-07-14-integration-tests-support.md  2026-07-14-integration-tests-templates.md  2026-07-14-integration-tests-values.md  2026-07-14-integration-tests-variables.md  2026-07-14-model-class-integration-tests.md  2026-07-14-unimplemented-methods.md  2026-07-14-xfail-improvements.md  2026-07-15-documentation-update.md  2026-07-15-system-tests-cli.md  2026-07-19-yaml-import-export.md
docs/superpowers/specs/: 2026-07-06-py-rhapsody-com-api-design.md  2026-07-06-rhapsody-cli-com-api-design.md  2026-07-07-audit-core-wrappers-design.md  2026-07-07-disable-project-subcommand-design.md  2026-07-08-structural-model-wrappers-design.md  2026-07-09-class-command-design.md  2026-07-09-element-cli-enhancements-design.md  2026-07-09-package-command-design.md  2026-07-10-element-commands-design.md  2026-07-11-rhapsody-application-redesign.md  2026-07-13-integration-tests-design.md  2026-07-15-system-tests-cli-design.md  2026-07-19-yaml-import-export-design.md
docs/tests/acceptance/: ats_app_test-specs.md  ats_cli_test-specs.md  ats_core_test-specs.md  ats_elem_test-specs.md  ats_exc_test-specs.md
docs/tests/integration/: its_app_test-specs.md  its_cli_test-specs.md  its_core_test-specs.md  its_elem_test-specs.md  its_exc_test-specs.md
docs/tests/system/: syts_app_test-specs.md  syts_cli_test-specs.md  syts_core_test-specs.md  syts_elem_test-specs.md  syts_exc_test-specs.md
docs/tests/unit/: uts_app_test-specs.md  uts_attr_test-specs.md  uts_cli_test-specs.md  uts_cls_test-specs.md  uts_core_test-specs.md  uts_elem_test-specs.md  uts_exc_test-specs.md  uts_op_test-specs.md  uts_pkg_test-specs.md  uts_port_test-specs.md
docs/user_guide/: cli_tools.rst  connecting_to_rhapsody.rst  installation.rst  quickstart.rst  working_with_attributes.rst  working_with_classes.rst  working_with_elements.rst  working_with_operations.rst  working_with_packages.rst  working_with_ports.rst  working_with_projects.rst
py_rhapsody/: __init__.py  _core.py  application.py
py_rhapsody/elements/: __init__.py  actor.py  attribute.py  class_.py  classifier.py  diagram.py  operation.py  package.py  requirement.py
scripts/: camel_to_snake.py  extract_mapping.py  manual_test.sh  rename_engine.py  rename_to_snake_case.py
src/py_rhapsody/: application.py
src/rhapsody_cli/: __init__.py  application.py  com_utils.py
tests/: __init__.py  test_application.py  test_cli.py  test_core.py  test_public_api.py
tests/cli/: test_command_classes.py  test_core.py  test_element_commands.py  test_io_commands.py  test_logging_config.py
tests/elements/: test_actor.py  test_attribute.py  test_class.py  test_classifier.py  test_diagram.py  test_instance.py  test_operation.py  test_package.py  test_project.py  test_requirement.py  test_statechart.py  test_usecase.py
tests/integration/: __init__.py  conftest.py
tests/models/: test_core.py
tests/system/: __init__.py  conftest.py
tests/unit/: __init__.py  conftest.py  test_application.py  test_public_api.py
(+269 files in other folders)
