[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhapsody-cli"
version = "0.2.0"
description = "Pythonic wrapper around the IBM Rhapsody COM API, mirroring the Rhapsody Java API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.1,<25",
    "mypy>=1.8,<2",
]
cli = [
    "tabulate>=0.9",
    "rich>=13.0",
]

[project.scripts]
rhapsody-cli = "rhapsody_cli.cli.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rhapsody_cli*"]

[tool.setuptools.package-data]
rhapsody_cli = ["py.typed"]

[tool.black]
line-length = 200
target-version = ["py38"]

[tool.ruff]
line-length = 200
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "win32com.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywintypes"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Rhapsody)",
    "system: marks tests as system tests (subprocess CLI, require Rhapsody)",
]
addopts = [
    "--cov=rhapsody_cli",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["rhapsody_cli"]
branch = true
omit = [
    "src/rhapsody_cli/__init__.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
